Added test div for testing scroll

--- a/header/style.css
+++ b/header/style.css
@@ -74,3 +74,9 @@ svg{
    
     background: linear-gradient(180deg, #0075E2 0%, #41C1FD 100%, #41C1FD 100%);
 }
+
+
+.test{
+    height: 150000px;
+    width:100%;
+}
