--- a/test/css/assets-test.css
+++ b/test/css/assets-test.css
@@ -1,4 +1,3 @@
-/*Test*/
 
 a.link-coins {
     color: #172A3F;
@@ -9,6 +8,7 @@ a.wallet-list-item:hover {
     transition: all .5s;
 }
 
+
 .search-container{
 	margin:0 auto;
 	    padding: 20px!important;
@@ -16,9 +16,10 @@ a.wallet-list-item:hover {
 }
 
 .search-block{
-	width:65%;
+	width:auto;
 	display:flex;
-	align-items:center;
+    align-items:center;
+    justify-content:center;
 }
 
 .input-wrapper{
@@ -28,7 +29,7 @@ a.wallet-list-item:hover {
     color: black;
 }
 .search-container .search-block .input-wrapper input{
-width: 411px;
+width: 560px;
 height: 48px;
 border: 1px solid #D1D8E2;
 box-sizing: border-box;
