--- a/test/css/table_data.css
+++ b/test/css/table_data.css
@@ -60,7 +60,7 @@ td.price-td a{
 
 .data-table-wrap table tbody tr td{
 		padding:30px 0;
-		font-size:19px;
+		font-size:24px;
 		color:#172A3F;
 		text-align:center;
 }
@@ -104,10 +104,11 @@ td.up{
 }
 .actions-button a{
     display:block;
-    width: 196px;
-    line-height: 34px;
+    width: 188px;
+    line-height: 48px;
     cursor: pointer;
-    font-size: 17px;
+	font-size: 18px;
+	height:48px;
     background: #2FA6FA;
 	border-radius: 48px;
 	color:white!important;
