--- a/css/test-media.css
+++ b/css/test-media.css
@@ -54,6 +54,12 @@
    	}
 
 }
+@media screen and (min-width: 1300px) and (max-width: 1500px) {
+	.main {
+    	padding-top: 180px;
+    }
+
+}
 
 @media screen and (min-width: 1300px) and (max-width: 1920px) {
 	.main-notebook {
@@ -72,6 +78,7 @@
 	 .partners-list {
     /*max-width: 800px;*/
     }
+    
   
   /* flex */
 
