--- a/css/header.css
+++ b/css/header.css
@@ -167,7 +167,16 @@ svg{
     height: 150000px;
     width:100%;
 }
+@media only screen  and (max-width:1920px){
 
+    .header{
+        
+        padding:0 268px;
+        
+    }
+
+    
+}
 
 @media only screen  and (max-width:1780px){
 
