--- a/test/css/table_data.css
+++ b/test/css/table_data.css
@@ -83,7 +83,7 @@ td.up{
 	position: absolute;
     left: 0;
     z-index: 15;
-    width: 1170px;
+    width: 80%;
 	height: 100%;
 	cursor: pointer;
 }
