--- a/test/css/table_data.css
+++ b/test/css/table_data.css
@@ -84,12 +84,12 @@ td.up{
 }
 
 .clickable_zone{
-	position: absolute;
-    left: 0;
-    z-index: 15;
-    width: 80%;
-	height: 100%;
-	cursor: pointer;
+	position: absolute!important;
+    left: 0!important;
+    z-index: 15!important;
+    width: 80%!important;
+	height: 95%!important;
+	cursor: pointer!important;
 }
 
 .data-table-wrap table tbody tr:hover{
