Table mobile version

--- a/test/css/assets-test.css
+++ b/test/css/assets-test.css
@@ -13,7 +13,7 @@ a.wallet-list-item:hover {
 
 .search-container{
 	margin:0 auto;
-	    padding: 20px!important;
+	padding: 20px;
     box-sizing: border-box;
 }
 
