Font weight normal added to assets text.

--- a/css/assets-media.css
+++ b/css/assets-media.css
@@ -5,6 +5,7 @@
     .main-subtitle {
         font-size: 17px;
         width: 80%;
+        font-weight: normal;
     }
     .main {
         padding-top: 0;
