--- a/css/item-page.css
+++ b/css/item-page.css
@@ -50,7 +50,7 @@ p {
 }
 
 .title-image{
-background-image: url('images/ama_report.png');
+background-image: url('images/ama_report_thorchain.png');
 width:100%;
 height:630px;
 background-position: center;
@@ -80,6 +80,20 @@ background-repeat: no-repeat;
     margin:0 auto;
     font-family: 'Roboto'
 }
+
+.ama-report h4{
+    text-align: left;
+    width:680px; 
+    margin:0 auto;
+    padding:15px 0;
+}
+
+.ama-report-paragraph{
+    margin-left:190px!important;
+    margin-top:10px!important;
+}
+
+
 
 
 
