--- a/css/item-page.css
+++ b/css/item-page.css
@@ -22,6 +22,12 @@
     color: #182848;
     margin-bottom: 50px;
 }
+
+.counter-wrapper{
+    border:none!important;
+    background:none!important;
+}
+
 .item-page 
 p {
     font-size: 18px;
