--- a/css/main.css
+++ b/css/main.css
@@ -581,7 +581,7 @@ box-shadow: none;
 	margin-top: 50px;
 	background: transparent url("images/mainnotebook.png") no-repeat center;
 	background-size: 100% 100%;
-	height: 429px;
+	height: 400px;
 }
 
 .mobile-interfaces3 {
@@ -634,6 +634,7 @@ box-shadow: none;
 .download-container {
 	z-index: 2;
 	padding-top: 60px;
+	margin-top:50px;
 }
 .download-section {
 	padding: 50px 0px;
