CSS fix for buy crypto pages

--- a/css/wallet.css
+++ b/css/wallet.css
@@ -1867,6 +1867,9 @@ ul .article-li {
     .item-page ol li {
         line-height: 30px;
     }
+    .buy-coin {
+        margin-top: 100px;
+    }
 
 }
 
