--- a/css/wallet.css
+++ b/css/wallet.css
@@ -1443,6 +1443,11 @@ ul .article-li {
     .buy-coin-wrapper {
         grid-template-columns: 320px;
     }
+    .exchange-banner {
+        width: 80% !important;
+        height: 53px !important;
+        box-shadow: 0 8px 40px rgba(24, 40, 72, 0.11);
+    }
 
 
     table, th, td {
