--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@
     padding:0 294px;
     height: 90px;
     box-sizing: border-box;
-    background: #324B80;
+    background: linear-gradient(90.13deg, #182848 0.03%, #243963 99.98%);
     margin:0 auto;
     display: flex;
     justify-content: center;
